# my_pratice

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  RunDocker.bat
QuestionApp/: CMakeLists.txt  QuestionApp_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
QuestionApp/data/pic/: pmp1.md
QuestionApp/middle/: DataLoader.h  QuestionController.h  QuestionData.h
QuestionApp/sql/: pmp.sqlite
cmake_example/: CMakeLists.txt
cmake_example/first/: CMakeLists.txt  first.cpp  first.h
cmake_example/second/: CMakeLists.txt  second.cpp  second.h
cmake_example/third/: CMakeLists.txt  main.cpp
pratice/: kmp.h
script/: StopAndCleanAllDocker.bat
